--- a/Homework/Homework_1.ipynb
+++ b/Homework/Homework_1.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "$N_{sky} = \\pi R_{blur}^2 n_{sky}$\n",
     "\n",
-    "$\\frac{S}{N} = \\frac{N_{star}}{\\sqrt[]{N_{star}+N_{sky}}}$"
+    "$\\frac{S}{N} = \\frac{N_{star}}{\\sqrt{N_{star}+N_{sky}}}$"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "\n",
     "Therefore,\n",
     "\n",
-    "$\\frac{S}{N} = \\frac{100{N_{star}}}{\\sqrt[]{100{N_{star}}+\\frac{100}{9} N_{sky}}}$"
+    "$\\frac{S}{N} = \\frac{100{N_{star}}}{\\sqrt{100{N_{star}}+\\frac{100}{9} N_{sky}}}$"
    ]
   },
   {
@@ -80,16 +80,16 @@
    "source": [
     "Time-dependent $\\frac{S}{N}$ :\n",
     "\n",
-    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt[]{t(N_{star}+N_{sky}})}$\n",
+    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt{t(N_{star}+N_{sky}})}$\n",
     "\n",
     "\n",
     "##### Source-limited case $ N_{star}>>N_{sky}$:\n",
     "\n",
-    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt[]{tN_{star}}} = \\sqrt[]{N_{star}t}$\n",
+    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt{tN_{star}}} = \\sqrt{N_{star}t}$\n",
     "\n",
     "##### Background-limited case $ N_{star}<<N_{sky}$:\n",
     "\n",
-    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt[]{tN_{sky}}} = \\frac{N_{star}\\sqrt[]{t} }{\\sqrt[]{N_{sky}}} $"
+    "$\\frac{S}{N} = \\frac{t N_{star}}{\\sqrt{tN_{sky}}} = \\frac{N_{star}\\sqrt{t} }{\\sqrt{N_{sky}}} $"
    ]
   },
   {
@@ -107,17 +107,17 @@
    "source": [
     "##### Source-limited case $ N_{star}>>N_{sky}$:\n",
     "\n",
-    "For 1-meter telescope: $\\sqrt[]{N_{star}t_1}$\n",
+    "For 1-meter telescope: $\\sqrt{N_{star}t_1}$\n",
     "\n",
-    "For 10-meter telescope: $\\sqrt[]{100N_{star}t_{10}}$\n",
+    "For 10-meter telescope: $\\sqrt{100N_{star}t_{10}}$\n",
     "\n",
     "$\\Rightarrow t_1 = 100 T_{10}$\n",
     "\n",
     "##### Background-limited case $ N_{star}<<N_{sky}$:\n",
     "\n",
-    "For 1-meter telescope: $\\frac{N_{star}\\sqrt[]{t_1} }{\\sqrt[]{N_{sky}}}$\n",
+    "For 1-meter telescope: $\\frac{N_{star}\\sqrt{t_1} }{\\sqrt{N_{sky}}}$\n",
     "\n",
-    "For 10-meter telescope: $\\frac{100N_{star}\\sqrt[]{t_{10}} }{\\sqrt[]{\\frac{100}{9}N_{sky}}}$\n",
+    "For 10-meter telescope: $\\frac{100N_{star}\\sqrt{t_{10}} }{\\sqrt{\\frac{100}{9}N_{sky}}}$\n",
     "\n",
     "$\\Rightarrow t_1 \\approx 1000 T_{10}$"
    ]
