--- a/Homework/Homework_2.ipynb
+++ b/Homework/Homework_2.ipynb
@@ -148,6 +148,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Answer:\n",
+    "\n",
     "Integrating over the solid angle:\n",
     "\n",
     "$\\int_{S}{} sin^3\\theta d\\Omega = \\int_{0}^{\\frac{\\pi}{2}}\\int_{0}^{2\\pi} sin^3\\theta sin\\theta d\\theta d\\phi = 2\\pi \\int_{0}^{\\frac{\\pi}{2}}sin^4\\theta d\\theta$\n",
