--- a/Lect1.ipynb
+++ b/Lect1.ipynb
@@ -60,6 +60,7 @@
     "If you are unfamiliar with the latex format, there is a cheat sheet at\n",
     "http://web.ift.uib.no/Teori/KURS/WRK/TeX/symALL.html\n",
     "\n",
+    "\n",
     "If you want to Python calculations, you simply just choose \"code\" in the above tab."
    ]
   },
@@ -937,25 +938,12 @@
     "\n",
     "1. Complete Problem 2 of Chapter 1. Type it in Jupyter notebook and submit it to your github.\n",
     "\n",
-    "2. Two of you form a group to study two current and future missions/telescopes in any research field (e.g. high energy, optical/IR, radio). Prepare a presenation for 10 minutes each person (20 minutes each group). Present it on Sep 15 class. If you can do some orders of magntiude estimate, that will be great.  (know the future)\n",
-    "\n",
-    "nick matthew cody, optical, near IR"
+    "2. Two of you form a group to study two current and future missions/telescopes in any research field (e.g. high energy, optical/IR, radio). Prepare a presenation for 10 minutes each person (20 minutes each group). Present it on Sep 15 class. If you can do some orders of magntiude estimate, that will be great.  (know the future)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Optical is .5 microns\n",
-    "\n",
-    "#q3 1mm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,120 +953,23 @@
     "acont=7.5657e-15\n",
     "ev=1.602e-12\n",
     "hcont=6.625e-27\n",
-    "ccont=3.e10  ###\n",
+    "ccont=3.e10\n",
     "kcont=1.381e-16\n",
     "rcont=8.314472e7\n",
     "me=9.109e-28\n",
-    "Gcont=6.67e-8 ###\n",
-    "Msun=1.989e33 ###\n",
+    "Gcont=6.67e-8\n",
+    "Msun=1.989e33\n",
     "Mearth=5.972e27\n",
     "Mjupiter=1.898e30\n",
     "Lsun=3.827e33\n",
     "rsun=6.96e10\n",
     "rjupiter=7.149e9\n",
     "rearth=6.371e8\n",
-    "au=1.49598e13 ###\n",
-    "pc=3.085678e18 ###\n",
+    "au=1.49598e13\n",
+    "pc=3.085678e18\n",
     "mh=1.67352e-24\n",
-    "yr=365.*24.*3600 ###\n",
+    "yr=365.*24.*3600\n",
     "pi=3.1415926"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. The nearest star alpha-centauri is 4.3 light year away. How large a telescope needs to be to resolve the stellar surface, assuming the telescope can reach diffraction limite with AO."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17.827355172413792\n"
-     ]
-    }
-   ],
-   "source": [
-    "# resolution = wavelength/telescope_diameter\n",
-    "# telescope_diameter = wavelength/resolution\n",
-    "# object_diameter = angular size/distance\n",
-    "# telescope_diameter = wavelength/\n",
-    "#obj_diameter/distance=theta (radians)\n",
-    "wavelength=5e-7 #meters\n",
-    "distance_ly = 4.3\n",
-    "distance= 4.3*3.0e8*yr\n",
-    "rsun=6.96e8\n",
-    "dsun=rsun*2\n",
-    "theta=dsun/distance\n",
-    "diameter= (1.22*wavelength)/theta\n",
-    "\n",
-    "print(diameter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.068144e+18"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "distance_m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.25"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.5707963"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    ".25*2*pi"
    ]
   },
   {
@@ -1091,7 +982,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1105,9 +996,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
