--- a/Lect2.ipynb
+++ b/Lect2.ipynb
@@ -95,42 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#assume all dust grains density 1 cm \n",
-    "#WHAT IS TOTAL DUST MASS\n",
-    "\n",
-    "#Wavelength where disk's spectrum peaks?\n",
-    "lamb_max=.29/20 #  = 0.1 mm\n",
-    "\n",
-    "#because lambda >> lambda_max, use Rayleigh-Jeans Law:\n",
-    "\n",
-    "#Step 2:\n",
-    "#I_v=S_v*Tau_v = source function x optical depth\n",
-    "#source funtion = B_v\n",
-    "\n",
-    "#for objects far away: F=I*area/distance\n",
-    "\n",
-    "# Step 3, What is the opacity of 1 cm dust grains?\n",
-    "\n",
-    "#alpha=rho*K\n",
-    "\n",
-    "#step 4:\n",
-    "\n",
-    "#opacity Kappa=1 cm^2/g\n",
-    "# Step 5, Use flux and opacity to calculate dust mass=rho*A*L \n",
-    "\n",
-    "#L is thickness of protoplanetary disk\n",
-    "\n",
-    "\n",
-    "####THINK ABOUT THIS PROBLEM\n",
-    "\n",
-    "#AREA CANCELS OUT\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -144,14 +112,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#homework due sunday night"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -165,9 +131,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
