--- a/Homework/Homework_4.ipynb
+++ b/Homework/Homework_4.ipynb
@@ -4,19 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Nick Juliano**\n",
-    "# **Astrophysics I | Homework 3**"
+    "# Nick Juliano\n",
+    "# Astrophysics I | Homework 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=Red> **<center>Chapter 4, Problem 1</center>** </font>\n",
+    "## Chapter 4, Problem 1\n",
     "<font color=Gray>\n",
     "In a fully degenerate gas, all the particles have energies lower than the Fermi energy. For such a gas we found (Eq. 4.19) the relation between the density $n_e$ and the Fermi momentum $p_F$:\n",
     "    \n",
-    "$ $\n",
     "    \n",
     "$\\Large n_e = \\frac{8 \\pi}{3h^3}p_F^3$.\n",
     "    \n",
@@ -30,22 +29,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **<center>Solution</center>**\n",
-    "### Part a\n",
+    "### Solution\n",
+    "#### Part a\n",
     "\n",
     "Using $n_e = \\frac{8 \\pi}{3h^3}p_F^3 \\Rightarrow p_F =(\\frac{3n_eh^3}{8 \\pi})^{1/3} $ and $p_F = \\sqrt{2m_eE_F}$, we see that:\n",
     "\n",
     "<center>$\\Large E_F=\\frac{1}{2m_e} (\\frac{3 n_e h^3}{8 \\pi})^{2/3}$</center>\n",
     "\n",
-    "### Part b\n",
+    "#### Part b\n",
     "\n",
     "By using $E_F=\\frac{1}{2m_e} (\\frac{3 n_e h^3}{8 \\pi})^{2/3}$ and $E_{th}=kT$, we can evaluate the ratio $E_{th}/E_F$.\n",
     "\n",
     "First, we need to estimate number density $n_e$ as follows:\n",
     "\n",
     "$n_e = \\frac{N_e}{V} \\approx \\frac{3M_{wd}}{8\\pi m_p R_{wd}^3}$, where $M_{wd} \\approx 0.6M_\\odot$ and $R_{wd} \\approx 8.5 \\times 10^9 cm$ $^{^{[1]}}$\n",
-    "\n",
-    "###### $^{^{*}}$(see page 75 of the textbook for more information) \n",
     "\n",
     "With this estimated number density, we can compute $E_{th}/E_F$ as below:"
    ]
@@ -116,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=Red> **<center>Chapter 4, Problem 2</center>** </font>\n",
+    "## Chapter 4, Problem 2\n",
     "\n",
     "<font color=Gray>\n",
     "The luminosity function of a population of objects is its observed distribution of luminosities. White dwarfs have a luminosity function of approximately $dN/dL \\approx L^{-7/4}$, with a cutoff below a luminosity $L \\approx 3 \\times 10^{-5}L_\\odot$. Show that this follows from the properties of individual white dwarfs, as follows.\n",
     "\n",
-    "$ $\n",
+    "\n",
     "    \n",
     "a. To obtain the power-law dependence, assume that a constant rate of star formation leads to a constant rate of white dwarf formation, $dN/dt$, from stars that complete their evolution. The white dwarf luminosity depends primarily on temperature, as $L \\propto T^4$. Finally, from Eq 4.57, the white dwarf cooling rate can be roughly approximated as $dT/dt \\propto T^4$. Use the chain rule to combine these three relations and obtain the functional form of $dN/dL$.\n",
     "    \n",
@@ -132,13 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **<center>Solution</center>**\n",
-    "\n",
-    "### Part a\n",
+    "### Solution\n",
+    "#### Part a\n",
     "\n",
     "The chain rule tells us that $\\frac{dN}{dL}=\\frac{dN}{dt}\\frac{dt}{dL}$, so we look to solve for $\\frac{dN}{dL}$ by finding $\\frac{dN}{dt}$ and $\\frac{dt}{dL}$\n",
     "\n",
-    "#### To find $\\frac{dt}{dL}$:\n",
+    "##### To find $\\frac{dt}{dL}$:\n",
     "\n",
     "From $\\frac{dT}{dt} \\propto T^4$, we find that $t \\propto -\\frac{1}{3T^3}$\n",
     "\n",
@@ -146,11 +142,11 @@
     "\n",
     "Now it becomes clear that that $t \\propto -\\frac{1}{3L^{3/4}}$ and $\\frac{dt}{dL} \\propto \\frac{1}{4L^{7/4}}$\n",
     "\n",
-    "#### To find $\\frac{dN}{dt}$:\n",
+    "##### To find $\\frac{dN}{dt}$:\n",
     "\n",
     "Because we assume a constant rate of star formation, $\\frac{dN}{dt} = c$ $^{^{[2]}}$\n",
     "\n",
-    "#### Solving for $\\frac{dN}{dL}$:\n",
+    "##### Solving for $\\frac{dN}{dL}$:\n",
     "\n",
     "$\\frac{dN}{dL}=\\frac{dN}{dt}\\frac{dt}{dL} \\propto c \\frac{1}{4L^{7/4}}$\n",
     "\n",
@@ -215,8 +211,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### $^{^{*}}$these values were obtained from page 75 of the textbook  \n",
-    "###### $^{^{**}}$this assumption also tells us that the amount of white dwarfs in the Universe is proportional to time, or $N= c(t-t_o)$, where $c$ is the constant formation rate of white dwarfs and $t_o$ is the time when white dwarfs began to form. $t>t_o$ because a negative amount of white dwarfs is not possible."
+    "###### $^{^{[1]}}$these values were obtained from page 75 of the textbook  \n",
+    "###### $^{^{[2]}}$this assumption also tells us that the amount of white dwarfs in the Universe is proportional to time, or $N= c(t-t_o)$, where $c$ is the constant formation rate of white dwarfs and $t_o$ is the time when white dwarfs began to form. $t>t_o$ because a negative amount of white dwarfs is not possible."
    ]
   }
  ],
