--- a/Homework/Homework_7.ipynb
+++ b/Homework/Homework_7.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "Which helps us reduce $\\frac{\\rho_0^2}{\\rho_1^2} - \\frac{\\rho_0}{\\rho_1}$ to\n",
     "\n",
-    "$\\frac{\\rho_0^2}{\\rho_1^2} - \\frac{\\rho_0}{\\rho_1} = \\frac{(\\gamma -1)^2}{(\\gamma +1)^2} - \\frac{\\rho_0}{\\rho_1} = \\frac{(\\gamma -1)}{(\\gamma +1)} = \\frac{\\gamma -1}{(\\gamma +1)^2}$ \n",
+    "$\\frac{\\rho_0^2}{\\rho_1^2} - \\frac{\\rho_0}{\\rho_1} = \\frac{(\\gamma -1)^2}{(\\gamma +1)^2} - \\frac{(\\gamma -1)}{(\\gamma +1)} = \\frac{-2(\\gamma -1)}{(\\gamma +1)^2}$ \n",
     "\n",
     "We finally arrive at $\\frac{\\epsilon}{E_{k,0}} = \\frac{4}{(\\gamma + 1)^2}$\n",
     "\n",
